<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_data_confirmation_alert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:text="@string/confirmation_alert_title"
        android:textColor="@color/editUserNameTitle"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/add_data_confirmation_alert_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:text="@string/confirmation_alert_msg"
        android:textAlignment="viewStart"
        android:textColor="@color/addDataMsg"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/confirm_alert_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/datecolon"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confirm_alert_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/confirm_alert_place_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confirm_alert_place_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/confirm_alert_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/amount"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confirm_alert_amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirm_alert_type_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/confirm_alert_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/deposit_type_colon"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confirm_alert_type_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/add_data_confirmation_alert_no_btn"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:background="@color/transparentColor"
            android:fontFamily="serif-monospace"
            android:text="@string/no"
            android:textColor="@color/editUserNameTitle"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_data_confirmation_alert_yes_btn"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@color/transparentColor"
            android:fontFamily="serif-monospace"
            android:text="@string/yes"
            android:textColor="@color/editUserNameTitle"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>