<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/username_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:fontFamily="serif-monospace"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:text="Text"
        android:textColor="@color/editUserNameTitle"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/empty_txt_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:textColor="@color/editUserNameErrorMsg"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/enter_new_name"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/username_edit_cancel_btn"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:background="@color/transparentColor"
            android:fontFamily="serif-monospace"
            android:text="@string/cancel"
            android:textColor="@color/editUserNameTitle"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/username_edit_ok_btn"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@color/transparentColor"
            android:fontFamily="serif-monospace"
            android:text="@string/ok"
            android:textColor="@color/editUserNameTitle"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>