<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.haitran.budgetmanagement.ViewRecordsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="100"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/monthly_total_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Spinner
                android:id="@+id/month_dropdown"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <Spinner
                android:id="@+id/year_dropdown"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="10"
            android:background="@drawable/custom_border_view_tab"
            android:orientation="horizontal">

            <android.support.design.widget.TabLayout
                android:id="@+id/view_tab"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TabItem
                    android:id="@+id/all_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:text="@string/all_view_tab" />

                <android.support.design.widget.TabItem
                    android:id="@+id/withdraw_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw" />

                <android.support.design.widget.TabItem
                    android:id="@+id/deposit_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit" />
            </android.support.design.widget.TabLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/edit_data_msg"
            android:textAlignment="center" />

        <ListView
            android:id="@+id/record_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="89"
            android:background="@android:color/white"
            android:divider="@color/viewDataCellBorder"
            android:dividerHeight="1dp"
            android:listSelector="@android:color/darker_gray" />

    </LinearLayout>
</LinearLayout>
