<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.haitran.budgetmanagement.EditDataActivity">

    <ScrollView
        android:id="@+id/add_data_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingTop="30dp">

            <LinearLayout
                android:id="@+id/add_data_text_fields_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="40dp">

                <TextView
                    android:id="@+id/edit_date_title_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/datecolon"
                    android:textColor="@color/addDataTitleText"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_date_tf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_square_border"
                    android:contentDescription="date_info"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:fontFamily="monospace"
                    android:inputType="date"
                    android:paddingLeft="5dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/edit_place_title_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/addDataTitleText"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_place_tf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_square_border"
                    android:contentDescription="date_info"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:fontFamily="monospace"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/edit_amount_title_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/amount"
                    android:textColor="@color/addDataTitleText"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_amount_tf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_square_border"
                    android:contentDescription="date_info"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:fontFamily="monospace"
                    android:inputType="numberDecimal"
                    android:paddingLeft="5dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/edit_checkbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/edit_checking_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:checked="true"
                        android:text="@string/checking"
                        android:visibility="visible" />

                    <RadioButton
                        android:id="@+id/edit_saving_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/saving"
                        android:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_boder_delete_btn"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/delete_btn"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/edit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_boder_add_btn"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/edit_title"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
